[project]
name = "langgraph-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.5.0",
    "langchain-anthropic>=0.3.20",
    "langchain-mcp-adapters>=0.1.10",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.7",
    "mcp[cli]>=1.15.0",
    "openai>=1.109.1",
]
